2007-09-20  Maciej W. Rozycki  <macro@mips.com>

	* mips-tdep.c (mips32_in_function_epilogue_p): New function.
	(mips16_in_function_epilogue_p): Likewise.
	(mips_in_function_epilogue_p): Likewise.
	(mips_gdbarch_init): Register mips_in_function_epilogue_p().

2007-09-19  Joel Brobecker  <brobecker@adacore.com>

	* configure.ac: Add check for "etext".
	* configure, config.in: Regenerate.
	* maint.c (TEXTEND): Only define if either _etext or etext
	are available.
	Disable the profiling functionality if TEXTEND is not defined.

2007-09-19  Daniel Jacobowitz  <dan@codesourcery.com>

	* mips-tdep.c (mips_stub_frame_cache): Correct the saved return
	address register.  Correct the call to frame_id_build.
	(mips_stub_frame_sniffer): Use the stub unwinder when the PC
	is invalid.

2007-09-18  Joel Brobecker  <brobecker@adacore.com>

	* ia64-tdep.c (refine_prologue_limit): Make sure we don't scan
	the linetable past the function end.

2007-09-18  James E. Wilson  <wilson@specifix.com>

	* MAINTAINERS: Update my email address.

2007-09-18  Jerome Guitton  <guitton@adacore.com>

	* inf-ttrace.c (inf_ttrace_private_thread_info): New structure type.
	(inf_ttrace_delete_dying_threads_callback): New function.
	(inf_ttrace_resume): After resuming the execution, iterate over
	the dying threads to delete them for the thread list.
	(inf_ttrace_wait): on TTEVT_LWP_EXIT and TTEVT_LWP_TERMINATE,
	mark the corresponding thread as dying instead of removing it
	from the thread list.
	(inf_ttrace_thread_alive): return 0 for dying threads.

2007-09-17  Joel Brobecker  <brobecker@adacore.com>

	* infrun.c (insert_step_resume_breakpoint_at_frame): Add assertion
	that return_frame is not null.

2007-09-17  Joel Brobecker  <brobecker@adacore.com>

	* solib-svr4.c: Add include of "auxv.h".
	(enable_break): Use the AT_BASE auxiliary entry if available.
	* Makefile.in (solib-svr4.o): Update dependencies.

2007-09-17  Joel Brobecker  <brobecker@adacore.com>
